--- a/Zhihugit/app/src/main/AndroidManifest.xml
+++ b/Zhihugit/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".SearchActivity"/>
+        <activity android:name=".MessageActivity"/>
 
     </application>
 
